--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "angular": "^1.8.2",
         "express": "^4.17.1"
     }
 }
